--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>PRG120V Arbeidskrav</title>
 </head>
 <body>
-<h1>PRG120V</h1>
+<h1>RG120V Arbeidskrav</h1>
 
 <ul>
 <h2>Obligatorisk Oppgave 2</h2>
